--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <!--Barra de navegación izquierda-->
             <div class="col-md-3 col-xl-2 bg-azul pr-0 vh-100">
                 <div class="nav flex-column nav-pills mt-5 pt-4" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                    <a class="nav-link" id="v-pills-estado-financiero-tab" data-toggle="pill" href="#v-pills-estado-financiero" role="tab" aria-controls="v-pills-estado-financiero" aria-selected="false">Estado financiero</a>
+                    <a class="nav-link active" id="v-pills-estado-financiero-tab" data-toggle="pill" href="#v-pills-estado-financiero" role="tab" aria-controls="v-pills-estado-financiero" aria-selected="true">Estado financiero</a>
                     <a class="nav-link" id="v-pills-venta-tab" data-toggle="pill" href="#v-pills-venta" role="tab" aria-controls="v-pills-venta" aria-selected="false">Venta</a>
                     <a class="nav-link" id="v-pills-otros-ingresos-tab" data-toggle="pill" href="#v-pills-otros-ingresos" role="tab" aria-controls="v-pills-otros-ingresos" aria-selected="false">Otros ingresos</a>
                     <a class="nav-link" id="v-pills-egresos-tab" data-toggle="pill" href="#v-pills-egresos" role="tab" aria-controls="v-pills-egresos" aria-selected="false">Egresos</a>
-                    <a class="nav-link active" id="v-pills-conceptos-tab" data-toggle="pill" href="#v-pills-conceptos" role="tab" aria-controls="v-pills-conceptos" aria-selected="true">Conceptos</a>
+                    <a class="nav-link" id="v-pills-conceptos-tab" data-toggle="pill" href="#v-pills-conceptos" role="tab" aria-controls="v-pills-conceptos" aria-selected="false">Conceptos</a>
                     <a class="nav-link" id="v-pills-colaboradores-tab" data-toggle="pill" href="#v-pills-colaboradores" role="tab" aria-controls="v-pills-colaboradores" aria-selected="false">Colaboradores</a>
                     <a class="nav-link" id="v-pills-informes-tab" data-toggle="pill" href="#v-pills-informes" role="tab" aria-controls="v-pills-profile" aria-selected="false">Informes</a>
                     <a class="nav-link" id="v-pills-tareas-por-realizar-tab" data-toggle="pill" href="#v-pills-tareas-por-realizar" role="tab" aria-controls="v-pills-messages" aria-selected="false">Tareas por realizar</a>
@@ -70,7 +70,7 @@
                 <div class="tab-content" id="v-pills-tabContent">
 
                     <!--Contenido de estado financiero-->
-                    <div class="tab-pane fade" id="v-pills-estado-financiero" role="tabpanel" aria-labelledby="v-pills-estado-financiero-tab">
+                    <div class="tab-pane fade show active" id="v-pills-estado-financiero" role="tabpanel" aria-labelledby="v-pills-estado-financiero-tab">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-10">
@@ -500,7 +500,7 @@
                     <!--Contenido de egresos-->
 
                     <!--Contenido de conceptos-->
-                    <div class="tab-pane fade show active" id="v-pills-conceptos" role="tabpanel" aria-labelledby="v-pills-conceptos-tab">
+                    <div class="tab-pane fade" id="v-pills-conceptos" role="tabpanel" aria-labelledby="v-pills-conceptos-tab">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-10">
